# Static-Qt

./: CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml
